// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteRuleModal renders as delete button after opening and closing modal 1`] = `
<React.Fragment>
  <EuiLink
    color="danger"
    onClick={[Function]}
    type="button"
  >
    Delete rule
  </EuiLink>
</React.Fragment>
`;

exports[`DeleteRuleModal renders as delete button when not visible 1`] = `
<React.Fragment>
  <EuiLink
    color="danger"
    onClick={[Function]}
    type="button"
  >
    Delete rule
  </EuiLink>
</React.Fragment>
`;

exports[`DeleteRuleModal renders modal after clicking delete rule link 1`] = `
<React.Fragment>
  <EuiLink
    color="danger"
    onClick={[Function]}
    type="button"
  >
    Delete rule
  </EuiLink>
  <EuiOverlayMask>
    <EuiConfirmModal
      buttonColor="primary"
      cancelButtonText="Cancel"
      confirmButtonText="Delete"
      defaultFocusedButton="confirm"
      onCancel={[Function]}
      onConfirm={[Function]}
      title="Delete rule"
    >
      <p>
        Are you sure you want to delete this rule?
      </p>
    </EuiConfirmModal>
  </EuiOverlayMask>
</React.Fragment>
`;
